# Picocalc_SD_Boot

./: .gitmodules  CMakeLists.txt  README.md  config.h  main.c  memmap_default_rp2350.ld
prebuild_output/: picocalc_sd_boot_pico2_w.uf2
src/: CMakeLists.txt  key_event.c  key_event.h  main.c  sd_card.c  sd_card.h  text_directory_ui.c  text_directory_ui.h
src/managers/: event_bus.c  event_bus.h  fs_manager.c  fs_manager.h  input_manager.c  input_manager.h  msc_manager.c  msc_manager.h  ui_manager.c  ui_manager.h
src/usb_msc/: usb_descriptors.c  usb_msc.c  usb_msc.h  usb_msc_dual_lun.c
